new database updated

--- a/Mission-8/appsettings.json
+++ b/Mission-8/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TaskConnection": "Data Source=movies.db"
+    "TaskConnection": "Data Source=tasks.db"
   }
 }
